--- a/views/index.html
+++ b/views/index.html
@@ -49,7 +49,7 @@
             </div>  
             <div class="number"><br>
               <label for="number">Recipient's Number</label><br>
-              <input type="text" id="number" name="number" placeholder="+2348156883674">
+              <input type="tel" id="number" name="number" placeholder="+2348156883674">
             </div>  
             <span class="btm">Note: For multiple recipients, use ‘;’ after each consecutive number </span>
             <button class="btn">Send</button>
